changed the design of upcoming tests to design in figma ie added border bottom and fixed spacing

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -91,7 +91,7 @@
   width: 100%;
   height: 30px;
   margin: 2px;
-  
+  border-bottom: 1px solid rgba(238, 238, 238, 1);
   &::before{
     content: "";
    transition: all 0.2s ease-in-out;
